# Sensor-dashboard

./: .gitignore  CMakeLists.txt  README.md  launch_dashboard.sh  test_camera.cpp
include/: CameraCapture.h  DataLogger.h  ImageProvider.h  ImageProviderWrapper.h  PlaybackController.h  SensorDataGenerator.h
qml/: CameraView.qml  ControlPanel.qml  ErrorDialog.qml  PlaybackControls.qml  SensorChart.qml  SettingsPanel.qml  main.qml
src/: CameraCapture.cpp  DataLogger.cpp  ImageProvider.cpp  ImageProviderWrapper.cpp  PlaybackController.cpp  SensorDataGenerator.cpp  main.cpp
